@@ -31,6 +31,7 @@
 20. Add czech translation - thanks to Kucheek
 21. Remove 'Play this mix' entry in MusicIP mix resutlts, instead use standard
     add/play buttons in subtoolbar.
+22. Display list of group members under group in 'Manage players' dialog.
 
 1.7.1
 -----
